--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Webentwicklung für lokale Dienstleister</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script> <!-- Hier ist die Verlinkung zum JavaScript-Skript -->
+
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
+    <header>
+        <h1>Webentwicklung für lokale Dienstleister</h1>
+        <p>Ihre professionelle Online-Präsenz</p>
+    </header>
 
+    <nav>
+        <ul>
+            <li><a href="#about">Über uns</a></li>
+            <li><a href="#services">Unsere Leistungen</a></li>
+            <li><a href="#contact">Kontakt</a></li>
+        </ul>
+    </nav>
+
+    <section id="about">
+        <h2>Über uns</h2>
+        <p>Wir sind ein erfahrenes Team von Webentwicklern, das sich auf lokale Dienstleister spezialisiert hat. Unsere maßgeschneiderten Lösungen helfen Ihnen, online erfolgreich zu sein.</p>
+    </section>
+
+    <section id="services">
+        <h2>Unsere Leistungen</h2>
+        <ul>
+            <li>Responsive Webdesign</li>
+            <li>Suchmaschinenoptimierung (SEO)</li>
+            <li>Content Management Systeme (CMS)</li>
+            <li>E-Commerce-Lösungen</li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Kontakt</h2>
+        <p>Kontaktieren Sie uns für ein unverbindliches Beratungsgespräch:</p>
+        <address>
+            <p>Email: <a href="mailto:info@webentwicklung-freilassing.de">info@webentwicklung-freilassing.de</a></p>
+            <p>Telefon: +49 123 456789</p>
+        </address>
+    </section>
+
+    <footer>
+        <p>© 2023 Webentwicklung Freilassing</p>
+    </footer>
+</body>
 </html>
